[package]
name = "s3lsio"
version = "0.1.15"
authors = ["Chris Jones"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["aws", "s3"]
repository = "https://github.com/lambdastackio/s3lsio"
homepage = "http://www.lambdastack.io/s3lsio"
documentation = "https://lambdastackio.github.io/s3lsio/s3lsio"
description = """
S3lsio is a command line utility for AWS S3 operations. It support V2 and V4 signatures. A number of 3rd party products
that accept S3 APIs use V2 signatures. It can be used in scripts, called from other apps, cron etc. It's driven by JSON
and can return data in JSON. It can also be used to keep buckets in sync.
NB: This is an Alpha release so there are functions not currently present. Those that are missing are being added
quickly. Also performs Ceph RGW Admin features.
Install: [Cargo install s3lsio] OR download at http://www.lambdastack.io/s3lsio
For help just run the cli: [s3lsio -h]
"""

[features]
nightly = []

[dependencies]
lsio = "0.1"
aws-sdk-rust = "0.1"
#clippy = "0.0"
clap = "2"
url = "1"
num_cpus = "1"
uuid = { version = "0.3", features = ["v4"] }
handlebars = "0.20"
log = "0.3"
env_logger = "0.3"
term = "0.4"
rustc-serialize = "0.3"
pbr = "1.0.0-alpha.1"
toml = "0.2"
md5 = "0.2"
time = "0.1"
chrono = "0.2"
#serde = "0.8"
#serde_json = "0.8"
